rename bot_history to mmr_history in all files
